# PC_info_record

./: .env.example  .gitignore  CHANGELOG.md  CODE_REVIEW_REPORT.md  DOCKER_DEPLOY_GUIDE.md  PROBLEM_SOLVED_SUMMARY.md  README.md  REVIEW_SUMMARY.md  UPGRADE_GUIDE.md  docker-compose.dev.yml  docker-compose.yml  fix_migration_issue.sh  manage.py  pyproject.toml  requirements.txt  test_ldap_connection.py
api/: urls.py  views.py
client/: collect_computer_info.ps1  collect_info.py  requirements.txt
computers/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
computers/migrations/: 0001_initial.py  0002_auto_20251011_1006.py  0003_remove_employee_department_remove_computer_employee_and_more.py
docker/: .dockerignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  nginx.conf
pc_info_record/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/computers/: computer_detail.html  computer_list.html  login.html  search.html
